# lilyaX

./: ConsoleApplication2.cpp  KRzheny.cpp  README.md  String.cpp  ass1.cpp  ass3.cpp  ass4.cpp  laba1.cpp  laba1.sln  laba2.cpp  laba3.cpp  laba4A.cpp  laba4B.cpp  laba5.cpp  laba8.cpp
_22.10.2022/src/: Main.java  Window.java  WindowSecond.java
ass2/: ass1_task1.cpp  ass2_task2.cpp
ax^2+bx+c=0/: ax^2+bx+c=0.cpp  functions.cpp  functions.h  test.h
flappy_bird/: CMakeLists.txt  bird.cpp  bird.h  column.cpp  column.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
laba 6/: laba6.cpp  proper_fraction.cpp  proper_fraction.h
laba 8/: CMakeLists.txt  calculator.cpp  calculator.h  functions.cpp  functions.h  main.cpp  stack.h
laba4A_with_tests/: Test.h  fr.cpp  fr.h  functions.cpp  laba_4_A.cpp  strkitten.h
laba7/: 1st.cpp  2nd.cpp  2nd.h  laba7.cpp  student.cpp  student.h
laba7_with_gtests/: 1st.cpp  1st.h  2nd.cpp  2nd.h  CMakeLists.txt  gtests.cpp  main.cpp  student.cpp  student.h
laba_6_with_google_tests/: CMakeLists.txt  google_tests.cpp  main.cpp  proper_fraction.cpp  proper_fraction.h
